POLParser.py
# Generated from POL.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class POLParser ( Parser ):

    grammarFileName = "POL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'''", "'\"'", "'prawda'", "'fa\\u0142sz'", 
                     "'niech'", "'b\\u0119dzie'", "'r\\u00F3wne'", "';'", 
                     "'niech b\\u0119dzie funkcja zwracaj\\u0105ca'", "'nazywa si\\u0119'", 
                     "'('", "')'", "'['", "']'", "'{'", "'}'", "','", "'.'", 
                     "'dla'", "'nale\\u017C\\u0105cego od'", "'do'", "'Dop\\u00F3ki'", 
                     "'wykonnuj'", "'dop\\u00F3ki'", "'je\\u017Celi'", "'w przeciwnym wypadku'", 
                     "'wypisz na konsol\\u0119'", "'zmie\\u0144'", "'na'", 
                     "'zwr\\u00F3\\u0107'", "'+'", "'-'", "'*'", "'/'", 
                     "'wi\\u0119ksze od'", "'mniejsze od'", "'wi\\u0119ksze b\\u0105d\\u017A r\\u00F3wne od'", 
                     "'mniejsze b\\u0105d\\u017A r\\u00F3wne od'", "'wynosi'", 
                     "'r\\u00F3\\u017Cne od'", "'liczba ca\\u0142kowita'", 
                     "'liczba zmiennoprzecinkowa'", "'znak'", "'\\u0142a\\u0144cuch znak\\u00F3w'", 
                     "'warto\\u015B\\u0107 logiczna'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "VARRIABLE", "BE", "ASSIGN", "EOS", "FUNCTION", 
                      "BE_NAMED", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", 
                      "BEGIN", "END", "COMMA", "DOT", "FOR", "START", "FINISH", 
                      "WHILE", "DO", "LOWER_CASE_WHILE", "IF", "ELSE", "PRINTF", 
                      "CHANGE", "TO", "RETURN_", "PLUS", "MINUS", "MULT", 
                      "DIV", "LT", "GT", "LOE", "GOE", "EQ", "NEQ", "INT", 
                      "FLOAT", "CHAR", "STR", "BOOL", "UPPER_CASE_LETTER", 
                      "LOWER_CASE_LETTER", "LETTER", "NUMBER", "WS" ]

    RULE_program = 0
    RULE_block = 1
    RULE_instruction = 2
    RULE_variable_declaration = 3
    RULE_function_definition = 4
    RULE_parameter = 5
    RULE_loop = 6
    RULE_for_loop = 7
    RULE_while_loop = 8
    RULE_do_while_loop = 9
    RULE_expression = 10
    RULE_function_execution = 11
    RULE_conditional = 12
    RULE_condition = 13
    RULE_output = 14
    RULE_variable_value_change = 15
    RULE_return_ = 16
    RULE_literal = 17
    RULE_unary_expression = 18
    RULE_arithmetic_expression = 19
    RULE_operator = 20
    RULE_comparison_operator = 21
    RULE_type = 22
    RULE_identifier = 23
    RULE_integer = 24
    RULE_float = 25
    RULE_char = 26
    RULE_string = 27
    RULE_boolean = 28

    ruleNames =  [ "program", "block", "instruction", "variable_declaration", 
                   "function_definition", "parameter", "loop", "for_loop", 
                   "while_loop", "do_while_loop", "expression", "function_execution", 
                   "conditional", "condition", "output", "variable_value_change", 
                   "return_", "literal", "unary_expression", "arithmetic_expression", 
                   "operator", "comparison_operator", "type", "identifier", 
                   "integer", "float", "char", "string", "boolean" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    VARRIABLE=5
    BE=6
    ASSIGN=7
    EOS=8
    FUNCTION=9
    BE_NAMED=10
    LPAREN=11
    RPAREN=12
    LBRACKET=13
    RBRACKET=14
    BEGIN=15
    END=16
    COMMA=17
    DOT=18
    FOR=19
    START=20
    FINISH=21
    WHILE=22
    DO=23
    LOWER_CASE_WHILE=24
    IF=25
    ELSE=26
    PRINTF=27
    CHANGE=28
    TO=29
    RETURN_=30
    PLUS=31
    MINUS=32
    MULT=33
    DIV=34
    LT=35
    GT=36
    LOE=37
    GOE=38
    EQ=39
    NEQ=40
    INT=41
    FLOAT=42
    CHAR=43
    STR=44
    BOOL=45
    UPPER_CASE_LETTER=46
    LOWER_CASE_LETTER=47
    LETTER=48
    NUMBER=49
    WS=50

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(POLParser.InstructionContext)
            else:
                return self.getTypedRuleContext(POLParser.InstructionContext,i)


        def getRuleIndex(self):
            return POLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = POLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 58
                self.instruction()
                self.state = 61 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1523057184) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(POLParser.InstructionContext)
            else:
                return self.getTypedRuleContext(POLParser.InstructionContext,i)


        def getRuleIndex(self):
            return POLParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = POLParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 63
                self.instruction()
                self.state = 66 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 1523057184) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_declaration(self):
            return self.getTypedRuleContext(POLParser.Variable_declarationContext,0)


        def function_definition(self):
            return self.getTypedRuleContext(POLParser.Function_definitionContext,0)


        def loop(self):
            return self.getTypedRuleContext(POLParser.LoopContext,0)


        def conditional(self):
            return self.getTypedRuleContext(POLParser.ConditionalContext,0)


        def output(self):
            return self.getTypedRuleContext(POLParser.OutputContext,0)


        def variable_value_change(self):
            return self.getTypedRuleContext(POLParser.Variable_value_changeContext,0)


        def return_(self):
            return self.getTypedRuleContext(POLParser.Return_Context,0)


        def getRuleIndex(self):
            return POLParser.RULE_instruction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruction" ):
                listener.enterInstruction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruction" ):
                listener.exitInstruction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruction" ):
                return visitor.visitInstruction(self)
            else:
                return visitor.visitChildren(self)




    def instruction(self):

        localctx = POLParser.InstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_instruction)
        try:
            self.state = 75
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.variable_declaration()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.function_definition()
                pass
            elif token in [19, 22, 23]:
                self.enterOuterAlt(localctx, 3)
                self.state = 70
                self.loop()
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 4)
                self.state = 71
                self.conditional()
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 5)
                self.state = 72
                self.output()
                pass
            elif token in [28]:
                self.enterOuterAlt(localctx, 6)
                self.state = 73
                self.variable_value_change()
                pass
            elif token in [30]:
                self.enterOuterAlt(localctx, 7)
                self.state = 74
                self.return_()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARRIABLE(self):
            return self.getToken(POLParser.VARRIABLE, 0)

        def identifier(self):
            return self.getTypedRuleContext(POLParser.IdentifierContext,0)


        def BE(self):
            return self.getToken(POLParser.BE, 0)

        def type_(self):
            return self.getTypedRuleContext(POLParser.TypeContext,0)


        def ASSIGN(self):
            return self.getToken(POLParser.ASSIGN, 0)

        def arithmetic_expression(self):
            return self.getTypedRuleContext(POLParser.Arithmetic_expressionContext,0)


        def EOS(self):
            return self.getToken(POLParser.EOS, 0)

        def getRuleIndex(self):
            return POLParser.RULE_variable_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable_declaration" ):
                listener.enterVariable_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable_declaration" ):
                listener.exitVariable_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_declaration" ):
                return visitor.visitVariable_declaration(self)
            else:
                return visitor.visitChildren(self)




    def variable_declaration(self):

        localctx = POLParser.Variable_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variable_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(POLParser.VARRIABLE)
            self.state = 78
            self.identifier()
            self.state = 79
            self.match(POLParser.BE)
            self.state = 80
            self.type_()
            self.state = 81
            self.match(POLParser.ASSIGN)
            self.state = 82
            self.arithmetic_expression()
            self.state = 83
            self.match(POLParser.EOS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(POLParser.FUNCTION, 0)

        def type_(self):
            return self.getTypedRuleContext(POLParser.TypeContext,0)


        def BE_NAMED(self):
            return self.getToken(POLParser.BE_NAMED, 0)

        def identifier(self):
            return self.getTypedRuleContext(POLParser.IdentifierContext,0)


        def LPAREN(self):
            return self.getToken(POLParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(POLParser.RPAREN, 0)

        def BEGIN(self):
            return self.getToken(POLParser.BEGIN, 0)

        def block(self):
            return self.getTypedRuleContext(POLParser.BlockContext,0)


        def END(self):
            return self.getToken(POLParser.END, 0)

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(POLParser.ParameterContext)
            else:
                return self.getTypedRuleContext(POLParser.ParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(POLParser.COMMA)
            else:
                return self.getToken(POLParser.COMMA, i)

        def getRuleIndex(self):
            return POLParser.RULE_function_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_definition" ):
                listener.enterFunction_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_definition" ):
                listener.exitFunction_definition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_definition" ):
                return visitor.visitFunction_definition(self)
            else:
                return visitor.visitChildren(self)




    def function_definition(self):

        localctx = POLParser.Function_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_function_definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(POLParser.FUNCTION)
            self.state = 86
            self.type_()
            self.state = 87
            self.match(POLParser.BE_NAMED)
            self.state = 88
            self.identifier()
            self.state = 89
            self.match(POLParser.LPAREN)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 68169720922112) != 0):
                self.state = 90
                self.parameter()
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==17:
                    self.state = 91
                    self.match(POLParser.COMMA)
                    self.state = 92
                    self.parameter()
                    self.state = 97
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 100
            self.match(POLParser.RPAREN)
            self.state = 101
            self.match(POLParser.BEGIN)
            self.state = 102
            self.block()
            self.state = 103
            self.match(POLParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(POLParser.TypeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(POLParser.IdentifierContext,0)


        def getRuleIndex(self):
            return POLParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = POLParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.type_()
            self.state = 106
            self.identifier()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def for_loop(self):
            return self.getTypedRuleContext(POLParser.For_loopContext,0)


        def while_loop(self):
            return self.getTypedRuleContext(POLParser.While_loopContext,0)


        def do_while_loop(self):
            return self.getTypedRuleContext(POLParser.Do_while_loopContext,0)


        def getRuleIndex(self):
            return POLParser.RULE_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop" ):
                listener.enterLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop" ):
                listener.exitLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoop" ):
                return visitor.visitLoop(self)
            else:
                return visitor.visitChildren(self)




    def loop(self):

        localctx = POLParser.LoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_loop)
        try:
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19]:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.for_loop()
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.while_loop()
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.do_while_loop()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class For_loopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(POLParser.FOR, 0)

        def identifier(self):
            return self.getTypedRuleContext(POLParser.IdentifierContext,0)


        def START(self):
            return self.getToken(POLParser.START, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(POLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(POLParser.ExpressionContext,i)


        def FINISH(self):
            return self.getToken(POLParser.FINISH, 0)

        def BEGIN(self):
            return self.getToken(POLParser.BEGIN, 0)

        def block(self):
            return self.getTypedRuleContext(POLParser.BlockContext,0)


        def END(self):
            return self.getToken(POLParser.END, 0)

        def getRuleIndex(self):
            return POLParser.RULE_for_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFor_loop" ):
                listener.enterFor_loop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFor_loop" ):
                listener.exitFor_loop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor_loop" ):
                return visitor.visitFor_loop(self)
            else:
                return visitor.visitChildren(self)




    def for_loop(self):

        localctx = POLParser.For_loopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_for_loop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(POLParser.FOR)
            self.state = 114
            self.identifier()
            self.state = 115
            self.match(POLParser.START)
            self.state = 116
            self.expression()
            self.state = 117
            self.match(POLParser.FINISH)
            self.state = 118
            self.expression()
            self.state = 119
            self.match(POLParser.BEGIN)
            self.state = 120
            self.block()
            self.state = 121
            self.match(POLParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class While_loopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(POLParser.WHILE, 0)

        def condition(self):
            return self.getTypedRuleContext(POLParser.ConditionContext,0)


        def BEGIN(self):
            return self.getToken(POLParser.BEGIN, 0)

        def block(self):
            return self.getTypedRuleContext(POLParser.BlockContext,0)


        def END(self):
            return self.getToken(POLParser.END, 0)

        def getRuleIndex(self):
            return POLParser.RULE_while_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile_loop" ):
                listener.enterWhile_loop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile_loop" ):
                listener.exitWhile_loop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile_loop" ):
                return visitor.visitWhile_loop(self)
            else:
                return visitor.visitChildren(self)




    def while_loop(self):

        localctx = POLParser.While_loopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_while_loop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(POLParser.WHILE)
            self.state = 124
            self.condition()
            self.state = 125
            self.match(POLParser.BEGIN)
            self.state = 126
            self.block()
            self.state = 127
            self.match(POLParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Do_while_loopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DO(self):
            return self.getToken(POLParser.DO, 0)

        def BEGIN(self):
            return self.getToken(POLParser.BEGIN, 0)

        def block(self):
            return self.getTypedRuleContext(POLParser.BlockContext,0)


        def END(self):
            return self.getToken(POLParser.END, 0)

        def LOWER_CASE_WHILE(self):
            return self.getToken(POLParser.LOWER_CASE_WHILE, 0)

        def condition(self):
            return self.getTypedRuleContext(POLParser.ConditionContext,0)


        def getRuleIndex(self):
            return POLParser.RULE_do_while_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDo_while_loop" ):
                listener.enterDo_while_loop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDo_while_loop" ):
                listener.exitDo_while_loop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDo_while_loop" ):
                return visitor.visitDo_while_loop(self)
            else:
                return visitor.visitChildren(self)




    def do_while_loop(self):

        localctx = POLParser.Do_while_loopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_do_while_loop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(POLParser.DO)
            self.state = 130
            self.match(POLParser.BEGIN)
            self.state = 131
            self.block()
            self.state = 132
            self.match(POLParser.END)
            self.state = 133
            self.match(POLParser.LOWER_CASE_WHILE)
            self.state = 134
            self.condition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arithmetic_expression(self):
            return self.getTypedRuleContext(POLParser.Arithmetic_expressionContext,0)


        def identifier(self):
            return self.getTypedRuleContext(POLParser.IdentifierContext,0)


        def function_execution(self):
            return self.getTypedRuleContext(POLParser.Function_executionContext,0)


        def getRuleIndex(self):
            return POLParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = POLParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expression)
        try:
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 136
                self.arithmetic_expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.identifier()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 138
                self.function_execution()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_executionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(POLParser.IdentifierContext,0)


        def LPAREN(self):
            return self.getToken(POLParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(POLParser.RPAREN, 0)

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(POLParser.ParameterContext)
            else:
                return self.getTypedRuleContext(POLParser.ParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(POLParser.COMMA)
            else:
                return self.getToken(POLParser.COMMA, i)

        def getRuleIndex(self):
            return POLParser.RULE_function_execution

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_execution" ):
                listener.enterFunction_execution(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_execution" ):
                listener.exitFunction_execution(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_execution" ):
                return visitor.visitFunction_execution(self)
            else:
                return visitor.visitChildren(self)




    def function_execution(self):

        localctx = POLParser.Function_executionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_function_execution)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.identifier()
            self.state = 142
            self.match(POLParser.LPAREN)
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 68169720922112) != 0):
                self.state = 143
                self.parameter()
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==17:
                    self.state = 144
                    self.match(POLParser.COMMA)
                    self.state = 145
                    self.parameter()
                    self.state = 150
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 153
            self.match(POLParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(POLParser.IF, 0)

        def condition(self):
            return self.getTypedRuleContext(POLParser.ConditionContext,0)


        def BEGIN(self, i:int=None):
            if i is None:
                return self.getTokens(POLParser.BEGIN)
            else:
                return self.getToken(POLParser.BEGIN, i)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(POLParser.BlockContext)
            else:
                return self.getTypedRuleContext(POLParser.BlockContext,i)


        def END(self, i:int=None):
            if i is None:
                return self.getTokens(POLParser.END)
            else:
                return self.getToken(POLParser.END, i)

        def ELSE(self):
            return self.getToken(POLParser.ELSE, 0)

        def getRuleIndex(self):
            return POLParser.RULE_conditional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditional" ):
                listener.enterConditional(self)
